# thought-train

./: Cargo.toml  README.md
resources/: thought-train.desktop
src/: ai.rs  app.rs  db.rs  main.rs
src/ui/: mod.rs  window.rs
