[package]
name = "thought-train"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI
gtk4 = { version = "0.11", features = ["v4_6"] }
libadwaita = { version = "0.9", features = ["v1_2"] }

# AI - local inference
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.5"
tokenizers = "0.22"

# Storage
rusqlite = { version = "0.38", features = ["bundled"] }

# Utilities
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
