[package]
name = "thought-train"
version = "0.2.0"
edition = "2021"

[dependencies]
# UI
iced = { version = "0.13", features = ["tokio", "svg", "image"] }

# AI - local inference
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.5"
tokenizers = "0.22"

# Storage
rusqlite = { version = "0.38", features = ["bundled"] }

# Utilities
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
